--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       .dimgray {
         color: dimgray;
       }
+
+      h3 {
+        color: steelblue;
+        border-bottom: 1px solid steelblue;
+      }
     </style>
   </head>
   <body>
@@ -21,5 +26,19 @@
       <h1>John Doe</h1>
       <h2>Dev Driven</h2>
     </div>
+
+    <h3>Contato</h3>
+
+    <h3>Sobre mim</h3>
+
+    <h3>Experiência</h3>
+
+    <h3>Idiomas</h3>
+
+    <h3>Educação</h3>
+
+    <h3>Habilidades</h3>
+
+    <h3>Por que me contratar?</h3>
   </body>
 </html>
