--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         color: steelblue;
         border-bottom: 1px solid steelblue;
       }
+
+      a {
+        text-decoration: none;
+      }
+
+      .bold {
+        font-weight: bold;
+      }
     </style>
   </head>
   <body>
@@ -28,17 +36,63 @@
     </div>
 
     <h3>Contato</h3>
+    <ul>
+      <li>Belo Horizonte, Minas Gerais ❤️</li>
+      <li>john@doe.com</li>
+      <li><a href="http://">https://github.com/johndoe</a></li>
+      <li><a href="http://">https://linkedin.com/johndoe</a></li>
+    </ul>
 
     <h3>Sobre mim</h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie
+      ipsum diam, in lobortis lorem condimentum a. Donec id auctor orci.
+      Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+      cubilia curae; Integer et commodo dolor, vel mattis nunc.
+    </p>
 
     <h3>Experiência</h3>
+    <span class="bold">(Março de 2020 - Atualmente)</span>
+
+    <span>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed ipsum
+      aliquam, molestie neque in, pulvinar magna. Sed interdum, nisl dignissim
+      elementum mollis, massa elit finibus lorem, ut mattis tortor quam vel
+      quam. Nulla vitae lectus ut dui dignissim condimentum.
+    </span>
+
+    <br /><br />
+    <span class="bold">(Fevereiro de 2018 - Atualmente)</span
+    ><span>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed ipsum
+      aliquam, molestie neque in, pulvinar magna. Sed interdum, nisl dignissim
+      elementum mollis, massa elit finibus lorem, ut mattis tortor quam vel
+      quam. Nulla vitae lectus ut dui dignissim condimentum.
+    </span>
 
     <h3>Idiomas</h3>
+    <ul>
+      <li>Portugês <span class="bold">(nativo)</span></li>
+      <li>Inglês <span class="bold">(fluente)</span></li>
+      <li>Espanhol <span class="bold">(consigo me virar)</span></li>
+    </ul>
 
     <h3>Educação</h3>
+    <ul>
+      <li>Formação Driven <span class="bold">(Atualmente)</span></li>
+
+      <li>Vida <span class="bold">(1998-Atualmente)</span></li>
+    </ul>
 
     <h3>Habilidades</h3>
+    <ul>
+      <li>Nulla vitae lectus ut dui dignissim condimentum.</li>
+      <li>Nulla vitae lectus ut dui dignissim condimentum.</li>
+      <li>Nulla vitae lectus ut dui dignissim condimentum.</li>
+      <li>Nulla vitae lectus ut dui dignissim condimentum.</li>
+    </ul>
 
     <h3>Por que me contratar?</h3>
+    <p>Sou bem legal. Por favor 🥺</p>
   </body>
 </html>
