Move style from html to css file

--- a/index.html
+++ b/index.html
@@ -5,29 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Currículo</title>
-
-    <style>
-      .center {
-        text-align: center;
-      }
-
-      .dimgray {
-        color: dimgray;
-      }
-
-      h3 {
-        color: steelblue;
-        border-bottom: 1px solid steelblue;
-      }
-
-      a {
-        text-decoration: none;
-      }
-
-      .bold {
-        font-weight: bold;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="center dimgray">
@@ -35,64 +13,66 @@
       <h2>Dev Driven</h2>
     </div>
 
-    <h3>Contato</h3>
-    <ul>
-      <li>Belo Horizonte, Minas Gerais ❤️</li>
-      <li>john@doe.com</li>
-      <li><a href="http://">https://github.com/johndoe</a></li>
-      <li><a href="http://">https://linkedin.com/johndoe</a></li>
-    </ul>
+    <div class="content-container">
+      <h3>Contato</h3>
+      <ul>
+        <li>Belo Horizonte, Minas Gerais ❤️</li>
+        <li>john@doe.com</li>
+        <li><a href="http://">https://github.com/johndoe</a></li>
+        <li><a href="http://">https://linkedin.com/johndoe</a></li>
+      </ul>
 
-    <h3>Sobre mim</h3>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie
-      ipsum diam, in lobortis lorem condimentum a. Donec id auctor orci.
-      Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
-      cubilia curae; Integer et commodo dolor, vel mattis nunc.
-    </p>
+      <h3>Sobre mim</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+        molestie ipsum diam, in lobortis lorem condimentum a. Donec id auctor
+        orci. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+        posuere cubilia curae; Integer et commodo dolor, vel mattis nunc.
+      </p>
 
-    <h3>Experiência</h3>
-    <span class="bold">(Março de 2020 - Atualmente)</span>
+      <h3>Experiência</h3>
+      <span class="bold">(Março de 2020 - Atualmente)</span>
 
-    <span>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed ipsum
-      aliquam, molestie neque in, pulvinar magna. Sed interdum, nisl dignissim
-      elementum mollis, massa elit finibus lorem, ut mattis tortor quam vel
-      quam. Nulla vitae lectus ut dui dignissim condimentum.
-    </span>
+      <span>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed
+        ipsum aliquam, molestie neque in, pulvinar magna. Sed interdum, nisl
+        dignissim elementum mollis, massa elit finibus lorem, ut mattis tortor
+        quam vel quam. Nulla vitae lectus ut dui dignissim condimentum.
+      </span>
 
-    <br /><br />
-    <span class="bold">(Fevereiro de 2018 - Atualmente)</span
-    ><span>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed ipsum
-      aliquam, molestie neque in, pulvinar magna. Sed interdum, nisl dignissim
-      elementum mollis, massa elit finibus lorem, ut mattis tortor quam vel
-      quam. Nulla vitae lectus ut dui dignissim condimentum.
-    </span>
+      <br /><br />
+      <span class="bold">(Fevereiro de 2018 - Atualmente)</span
+      ><span>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed
+        ipsum aliquam, molestie neque in, pulvinar magna. Sed interdum, nisl
+        dignissim elementum mollis, massa elit finibus lorem, ut mattis tortor
+        quam vel quam. Nulla vitae lectus ut dui dignissim condimentum.
+      </span>
 
-    <h3>Idiomas</h3>
-    <ul>
-      <li>Portugês <span class="bold">(nativo)</span></li>
-      <li>Inglês <span class="bold">(fluente)</span></li>
-      <li>Espanhol <span class="bold">(consigo me virar)</span></li>
-    </ul>
+      <h3>Idiomas</h3>
+      <ul>
+        <li>Portugês <span class="bold">(nativo)</span></li>
+        <li>Inglês <span class="bold">(fluente)</span></li>
+        <li>Espanhol <span class="bold">(consigo me virar)</span></li>
+      </ul>
 
-    <h3>Educação</h3>
-    <ul>
-      <li>Formação Driven <span class="bold">(Atualmente)</span></li>
+      <h3>Educação</h3>
+      <ul>
+        <li>Formação Driven <span class="bold">(Atualmente)</span></li>
 
-      <li>Vida <span class="bold">(1998-Atualmente)</span></li>
-    </ul>
+        <li>Vida <span class="bold">(1998-Atualmente)</span></li>
+      </ul>
 
-    <h3>Habilidades</h3>
-    <ul>
-      <li>Nulla vitae lectus ut dui dignissim condimentum.</li>
-      <li>Nulla vitae lectus ut dui dignissim condimentum.</li>
-      <li>Nulla vitae lectus ut dui dignissim condimentum.</li>
-      <li>Nulla vitae lectus ut dui dignissim condimentum.</li>
-    </ul>
+      <h3>Habilidades</h3>
+      <ul>
+        <li>Nulla vitae lectus ut dui dignissim condimentum.</li>
+        <li>Nulla vitae lectus ut dui dignissim condimentum.</li>
+        <li>Nulla vitae lectus ut dui dignissim condimentum.</li>
+        <li>Nulla vitae lectus ut dui dignissim condimentum.</li>
+      </ul>
 
-    <h3>Por que me contratar?</h3>
-    <p>Sou bem legal. Por favor 🥺</p>
+      <h3>Por que me contratar?</h3>
+      <p>Sou bem legal. Por favor 🥺</p>
+    </div>
   </body>
 </html>
