Update html and css

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Currículo</title>
+    <title>Prática - Currículo do Dev Driven</title>
+    <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="center dimgray">
-      <h1>John Doe</h1>
+      <h1>JOHN DOE</h1>
       <h2>Dev Driven</h2>
     </div>
 
@@ -31,23 +32,27 @@
       </p>
 
       <h3>Experiência</h3>
-      <span class="bold">(Março de 2020 - Atualmente)</span>
 
-      <span>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed
-        ipsum aliquam, molestie neque in, pulvinar magna. Sed interdum, nisl
-        dignissim elementum mollis, massa elit finibus lorem, ut mattis tortor
-        quam vel quam. Nulla vitae lectus ut dui dignissim condimentum.
-      </span>
+      <p>
+        <span class="bold">(Março de 2020 - Atualmente)</span>
 
-      <br /><br />
-      <span class="bold">(Fevereiro de 2018 - Atualmente)</span
-      ><span>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed
-        ipsum aliquam, molestie neque in, pulvinar magna. Sed interdum, nisl
-        dignissim elementum mollis, massa elit finibus lorem, ut mattis tortor
-        quam vel quam. Nulla vitae lectus ut dui dignissim condimentum.
-      </span>
+        <span>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed
+          ipsum aliquam, molestie neque in, pulvinar magna. Sed interdum, nisl
+          dignissim elementum mollis, massa elit finibus lorem, ut mattis tortor
+          quam vel quam. Nulla vitae lectus ut dui dignissim condimentum.
+        </span>
+      </p>
+
+      <p>
+        <span class="bold">(Fevereiro de 2018 - Atualmente)</span
+        ><span>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed
+          ipsum aliquam, molestie neque in, pulvinar magna. Sed interdum, nisl
+          dignissim elementum mollis, massa elit finibus lorem, ut mattis tortor
+          quam vel quam. Nulla vitae lectus ut dui dignissim condimentum.
+        </span>
+      </p>
 
       <h3>Idiomas</h3>
       <ul>
